--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "clsx": "^1.2.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
