--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.7",
     "clsx": "^1.2.1",
     "next": "12.3.1",
     "react": "18.2.0",
