--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^1.3.0",
+    "react-query": "^3.39.2",
     "zod": "^3.19.1"
   },
   "devDependencies": {
