--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,8 @@
   "rules": {
     "react-hooks/exhaustive-deps": "error",
     "react/display-name": "error",
-    "react/jsx-curly-brace-presence": ["error", "never"]
+    "react/jsx-curly-brace-presence": ["error", "never"],
+    "jsx-a11y/anchor-is-valid": "off"
   },
   "ignorePatterns": [
     "src/**/*.test.ts",
