feat: added translations for singup and signin pages

--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
       "prettier --write"
     ],
     "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
+      "prettier --write"
     ]
   }
 }
